--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto - Paleta de Cores</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <section>
     <h1 id="title">Paleta de Cores</h1>
   </section>
+  <section id="color-palette">
+    <button class="color" style="background-color: black;"></button>
+    <button class="color" style="background-color: red;"></button>
+    <button class="color" style="background-color: green;"></button>
+    <button class="color" style="background-color: blue;"></button>
+    <button class="color" style="background-color: yellow;"></button>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
