--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <h1 id="title">Paleta de Cores</h1>
   </section>
   <section id="color-palette">
-    <button class="color" style="background-color: black;"></button>
-    <button class="color" style="background-color: red;"></button>
-    <button class="color" style="background-color: green;"></button>
-    <button class="color" style="background-color: blue;"></button>
+    <div class="color" style="background-color: black;"></div>
+    <div class="color" style="background-color: red;"></div>
+    <div class="color" style="background-color: green;"></div>
+    <div class="color" style="background-color: blue;"></div>
+  </section>
+  
+  <div id="pixel-board">
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
