--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1 id="title">Paleta de Cores</h1>
   </section>
   <section id="color-palette">
-    <div class="color" style="background-color: black;"></div>
-    <div class="color" style="background-color: red;"></div>
-    <div class="color" style="background-color: green;"></div>
-    <div class="color" style="background-color: blue;"></div>
+    <div class="color select" id="black"></div>
+    <div class="color" id="red"></div>
+    <div class="color" id="green"></div>
+    <div class="color" id="blue"></div>
   </section>
   
   <div id="pixel-board">
