--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     <div class="color" id="green"></div>
     <div class="color" id="blue"></div>
   </section>
+  <section>
+    <div id="pixel-board">
+    </div>
+  </section>
   
-  <div id="pixel-board">
-  </div>
+  <button id="clear-board">Limpar</button>
+
   <script src="script.js"></script>
 </body>
 </html>
