--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <div class="color" id="green"></div>
     <div class="color" id="blue"></div>
   </section>
+
+  <button id="clear-board">Limpar</button>
   <section>
+    
     <div id="pixel-board">
     </div>
   </section>
   
-  <button id="clear-board">Limpar</button>
+  <input id="board-size" type="text">
+  <button id="generate-board">Gerar</button>
+  
 
   <script src="script.js"></script>
 </body>
