Adiciona um input que o usuario consegue alterar a quantidade de pixels (requisito 10)

--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
   </section>
 
   <button id="clear-board">Limpar</button>
+  <input id="board-size" type="text">
+  <button id="generate-board">VQV</button>
   <section>
-    
+
     <div id="pixel-board">
     </div>
   </section>
   
-  <input id="board-size" type="text">
-  <button id="generate-board">Gerar</button>
-  
-
   <script src="script.js"></script>
 </body>
 </html>
