--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </section>
 
   <button id="clear-board">Limpar</button>
-  <input id="board-size" type="text">
+  <input id="board-size" type="range(5,50)">
   <button id="generate-board">VQV</button>
   <section>
 
