--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </section>
 
   <button id="clear-board">Limpar</button>
-  <input id="board-size", min="0">
+  <input id="board-size", type="number", min="1">
   <button id="generate-board">VQV</button>
   <section>
 
