--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <h1 id="title">Paleta de Cores</h1>
   </section>
   <section id="color-palette">
-    <div class="color" id="black"></div>
-    <div class="color" id="red"></div>
-    <div class="color" id="green"></div>
-    <div class="color" id="blue"></div>
+    <div class="color" id="blackColor"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
   </section>
 
   <button id="clear-board">Limpar</button>
   <input id="board-size", type="number", min="1">
   <button id="generate-board">VQV</button>
+  
   <section>
-
     <div id="pixel-board">
     </div>
   </section>
