Adiciona alguns estilos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="color"></div>
     <div class="color"></div>
   </section>
-
+  <section>
+    <p>Selecione a quantidade de pixels</p>
+  </section>
   <button id="clear-board">Limpar</button>
   <input id="board-size", type="number", min="1">
   <button id="generate-board">VQV</button>
